typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement13.ts.stderr
error: UndefinedSymbol {
    sym: Atom('X' type=inline),
    span: Span {
        lo: BytePos(
            35,
        ),
        hi: BytePos(
            36,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement13.ts:2:20
  |
2 | for (let {a, b} of X) {
  |                    ^

